objects/Manual_Device__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <inlineHelpText>Please Enter MULTIPLE for multiple Accounts.</inlineHelpText>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manual Devices</relationshipLabel>
        <relationshipName>Manual_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attn_To__c</fullName>
        <label>Attn To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fab</fullName>
                </value>
                <value>
                    <fullName>Fab &amp; Region</fullName>
                </value>
                <value>
                    <fullName>Fab &amp; TD/ACT</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Region&amp; TD/ACT</fullName>
                </value>
                <value>
                    <fullName>TD/ACT</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidence_Level_Tapeout__c</fullName>
        <description>Confidence Level Tapeout</description>
        <label>Confidence Level Tapeout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeviceIdShare__c</fullName>
        <label>DeviceIdShare</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Id__c</fullName>
        <label>Device Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Manual Devices</relationshipLabel>
        <relationshipName>Manual_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ET_Met_Target__c</fullName>
        <label>ET Met Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Export__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 3/5</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>MULTIPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_1st_3_reticle_Lot_Start__c</fullName>
        <label>Forecast 1st 3 reticle/Lot Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Forecast_GDSII_In__c</fullName>
        <label>Forecast GDSII In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.010UM</fullName>
                </value>
                <value>
                    <fullName>0.014UM</fullName>
                </value>
                <value>
                    <fullName>0.020UM</fullName>
                </value>
                <value>
                    <fullName>0.022UM</fullName>
                </value>
                <value>
                    <fullName>0.028UM</fullName>
                </value>
                <value>
                    <fullName>0.032UM</fullName>
                </value>
                <value>
                    <fullName>0.040UM</fullName>
                </value>
                <value>
                    <fullName>0.045UM</fullName>
                </value>
                <value>
                    <fullName>0.055UM</fullName>
                </value>
                <value>
                    <fullName>0.060UM</fullName>
                </value>
                <value>
                    <fullName>0.065UM</fullName>
                </value>
                <value>
                    <fullName>0.09UM</fullName>
                </value>
                <value>
                    <fullName>0.11UM</fullName>
                </value>
                <value>
                    <fullName>0.13UM</fullName>
                </value>
                <value>
                    <fullName>0.14UM</fullName>
                </value>
                <value>
                    <fullName>0.152UM</fullName>
                </value>
                <value>
                    <fullName>0.153UM</fullName>
                </value>
                <value>
                    <fullName>0.15UM</fullName>
                </value>
                <value>
                    <fullName>0.16UM</fullName>
                </value>
                <value>
                    <fullName>0.18UM</fullName>
                </value>
                <value>
                    <fullName>0.20UM</fullName>
                </value>
                <value>
                    <fullName>0.22UM</fullName>
                </value>
                <value>
                    <fullName>0.25UM</fullName>
                </value>
                <value>
                    <fullName>0.30UM</fullName>
                </value>
                <value>
                    <fullName>0.32UM</fullName>
                </value>
                <value>
                    <fullName>0.35UM</fullName>
                </value>
                <value>
                    <fullName>0.45UM</fullName>
                </value>
                <value>
                    <fullName>0.50UM</fullName>
                </value>
                <value>
                    <fullName>0.60UM</fullName>
                </value>
                <value>
                    <fullName>0.70UM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prime_Die__c</fullName>
        <label>Prime Die</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Family__c</fullName>
        <label>Process Family</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Geometry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Super Low Power</fullName>
                </value>
                <value>
                    <fullName>Super High Performance</fullName>
                </value>
                <value>
                    <fullName>Low Power eDRAM</fullName>
                </value>
                <value>
                    <fullName>Interposer</fullName>
                </value>
                <value>
                    <fullName>SOI</fullName>
                </value>
                <value>
                    <fullName>MEMS</fullName>
                </value>
                <value>
                    <fullName>High Performance / Low Voltage</fullName>
                </value>
                <value>
                    <fullName>Low Power / Ultra Low Leakage</fullName>
                </value>
                <value>
                    <fullName>Photonics</fullName>
                </value>
                <value>
                    <fullName>Generic / Nominal</fullName>
                </value>
                <value>
                    <fullName>XM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Update__c</fullName>
        <label>Project Update</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Proto_Functional_Status__c</fullName>
        <label>Proto Functional Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending Test</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish_Report__c</fullName>
        <label>Publish Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>MULTIPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Proto_Risk Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tapeout_Type__c</fullName>
        <label>Tapeout Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer MPW</fullName>
                </value>
                <value>
                    <fullName>GlobalShuttle MPW</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
                <value>
                    <fullName>Single Product</fullName>
                </value>
                <value>
                    <fullName>Full Layer Retrofit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14XM</fullName>
                </value>
                <value>
                    <fullName>20LPM</fullName>
                </value>
                <value>
                    <fullName>22SOI</fullName>
                </value>
                <value>
                    <fullName>28A</fullName>
                </value>
                <value>
                    <fullName>28HPM</fullName>
                </value>
                <value>
                    <fullName>28HPP</fullName>
                </value>
                <value>
                    <fullName>28LPH</fullName>
                </value>
                <value>
                    <fullName>28LPH-N</fullName>
                </value>
                <value>
                    <fullName>28-LP-TI</fullName>
                </value>
                <value>
                    <fullName>28LPQ</fullName>
                </value>
                <value>
                    <fullName>28LPS</fullName>
                </value>
                <value>
                    <fullName>28SHP</fullName>
                </value>
                <value>
                    <fullName>28SLP</fullName>
                </value>
                <value>
                    <fullName>28SLP-ST</fullName>
                </value>
                <value>
                    <fullName>28U</fullName>
                </value>
                <value>
                    <fullName>28SLP_RF</fullName>
                </value>
                <value>
                    <fullName>32SOI</fullName>
                </value>
                <value>
                    <fullName>40LP</fullName>
                </value>
                <value>
                    <fullName>40LP_RF</fullName>
                </value>
                <value>
                    <fullName>45LP</fullName>
                </value>
                <value>
                    <fullName>45SOI</fullName>
                </value>
                <value>
                    <fullName>55LPE</fullName>
                </value>
                <value>
                    <fullName>55LPE_RF</fullName>
                </value>
                <value>
                    <fullName>65G</fullName>
                </value>
                <value>
                    <fullName>65LP</fullName>
                </value>
                <value>
                    <fullName>65LPE</fullName>
                </value>
                <value>
                    <fullName>65LPE_RF</fullName>
                </value>
                <value>
                    <fullName>65SOI</fullName>
                </value>
                <value>
                    <fullName>90SOI</fullName>
                </value>
                <value>
                    <fullName>90TFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Manual Device</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Device__c</columns>
        <columns>Account__c</columns>
        <columns>Region__c</columns>
        <columns>Fab__c</columns>
        <columns>Geometry__c</columns>
        <columns>Device_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Tapeout_Type__c</columns>
        <columns>IsActive__c</columns>
        <columns>Project_Update__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MD-{0000000000}</displayFormat>
        <label>Manual Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Devices</pluralLabel>
    <recordTypes>
        <fullName>Manual_Device_DI_Read_Only</fullName>
        <active>true</active>
        <description>Record Type after updating Manual Device Record for Read Only Device Id</description>
        <label>Manual Device DI Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manual_Device_Insert</fullName>
        <active>true</active>
        <description>Record Type while inserting Manual Device Record.</description>
        <label>Manual Device Insert</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Manual_Device_Id_Format</fullName>
        <active>false</active>
        <description>Device Id can only contains Numeric, Letters, Hyphen, Underscore and Dot.</description>
        <errorConditionFormula>NOT(REGEX(Device_Id__c, &quot;^[0-9A-Za-z\\-\\_\\.]+$&quot;))</errorConditionFormula>
        <errorDisplayField>Device_Id__c</errorDisplayField>
        <errorMessage>Only letters, numeric, dash, underscore and dot are allowed in the Device ID field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manual_Device_Prime_Die_Required</fullName>
        <active>false</active>
        <description>Prime Die is required for GlobalShuttle MPW Tapeout Type.</description>
        <errorConditionFormula>IF( AND( ISPICKVAL( Tapeout_Type__c,&apos;GlobalShuttle MPW&apos;), ISBLANK( Prime_Die__c )), true, false)</errorConditionFormula>
        <errorDisplayField>Prime_Die__c</errorDisplayField>
        <errorMessage>Prime Die is a Required for GlobalShuttle MPW Tapeout Type.</errorMessage>
    </validationRules>
</CustomObject>